code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_7.wast
(assert_malformed
  (module quote "(func (i32.const 0) (block (param $x i32) (drop)))")
  "unexpected token"
)